feat: AGEL-1162 Просмотр подробной информации о депозите пользователя

--- a/src/entities/product/product-statuses/styles.scss
+++ b/src/entities/product/product-statuses/styles.scss
@@ -26,7 +26,7 @@
             &-main {
                 background-color: var(--bg-action);
             }
-            &-active{
+            &-active, &-capitalization{
                 background-color: var(--bg-success);
             }
             &-closed{
