feat: AGEL-1162 Переключатель пролонгации, вся информация отображается.

--- a/src/entities/product/product-statuses/styles.scss
+++ b/src/entities/product/product-statuses/styles.scss
@@ -35,6 +35,12 @@
             &-blocked{
                 background-color: var(--bg-error);
             }
+            &-autoprolongation {
+                background-color: var(--bg-success);
+            }
+            &-autoprolongationoff {
+               background-color: var(--bg-warning)
+            }
         }
     }
 }
