--- a/src/entities/deposits/deposit-card/styles.scss
+++ b/src/entities/deposits/deposit-card/styles.scss
@@ -8,6 +8,7 @@
     &__container {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         gap: 20px;
     }
     &__title{
