feat: перенесла Switcher в features, добавила его в header, добавила стили, иконку для switcher, адаптив под мобильные устройства

--- a/src/widgets/header/ui/styles.scss
+++ b/src/widgets/header/ui/styles.scss
@@ -3,4 +3,25 @@
   padding-bottom: 30px;
   display: flex;
   gap: 60px;
+  position: relative;
+}
+.switcher {
+  position: absolute;
+  right: 30px;
+  top: 35px;
+}
+@media screen and (max-width: 900px) {
+  .switcher {
+    right: 70px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .switcher {
+    right: 50px;
+  }
+}
+@media screen and (max-width: 390px) {
+  .switcher {
+    top: 54px;
+  }
 }
