--- a/src/pages/deposit/ui/deposit-info/styles.scss
+++ b/src/pages/deposit/ui/deposit-info/styles.scss
@@ -1,82 +1,46 @@
 .deposit-info {
     &__first-row {
         display: flex;
-        align-items: flex-start;
-        justify-content: space-between;
-        gap: 16px;
-    }
-
-    @media screen and (max-width: 1000px)  {
-        &__first-column {
-            max-width: 100%;
-            flex: 1 1 100%;
-        }
-        &__second-column {
-            flex: 1 1 100%;
-            max-width: calc(100% - 56px);
-            margin-left: 56px;
-        }
-    }
-
-    &__column {
-        display: flex;
         flex-direction: column;
-        gap: 24px;
-    }
-
-    &__row {
-        display: flex;
-        align-items: flex-start;
-        justify-content: space-between;
         gap: 16px;
 
-        .account-info__name__more-info {
-            @media screen and (min-width: 1000px) {
-                display: none;
+        &__main {
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            gap: 16px;
+
+            &__info {
+                display: flex;
+                column-gap: 24px;
+                row-gap: 4px;
+                max-width: calc(100% - 36px - 16px - 32px*2);
+
+                @media screen and (min-width: 1000px) {
+                    height: 32px;
+                }
+
+                @media screen and (max-width: 1000px) {
+                    flex-wrap: wrap;
+                }
             }
         }
-    }
 
-    &__dropdown {
-        display: flex;
-        justify-content: flex-end;
-    }
-
-    &__main {
-        display: flex;
-        column-gap: 24px;
-        row-gap: 4px;
-
-        @media screen and (min-width: 1000px) {
-            height: 32px;
+        &__numbers {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
         }
 
-        @media screen and (max-width: 1000px) {
-            flex-wrap: wrap;
-        }
-
-    }
-
-    &__main__info {
-        @media screen and (max-width: 1000px) {
-            gap: 12px;
-        }
-
-        display: flex;
-        gap: 16px;
-        flex-direction: column;
-        width: 100%;
-        &__second-row {
+        &__number {
             display: flex;
             gap: 8px;
             align-items: flex-start;
-
-            >button {
+            > button {
                 width: 24px;
             }
-
-            >div:first-child {
-                @media screen and (min-width: 500px) {
+            > div:first-child {
+                @media screen and (min-width: 500px)  {
                     display: flex;
                     gap: 4px;
                     flex-wrap: wrap;
@@ -85,37 +49,93 @@
         }
     }
 
-    &__info {
-        @media screen and (max-width: 1100px) {
-            flex-wrap: wrap;
+    &__second-row {
+        display: flex;
+        justify-content: space-between;
+        gap: 32px;
 
-            >div {
+        @media screen and (max-width: 1000px)  {
+            flex-wrap: wrap;
+            > div {
                 flex: 1 1 100%;
+                max-width: 100%;
             }
         }
 
-        display: flex;
-        gap: 15px;
-        flex-wrap: wrap;
-    }
-
-    &__balance {
-        display: flex;
-        justify-content:flex-end;
-        gap: 24px;
-        padding-bottom: 16px;
-    }
-
-    &__balance-options {
-        display: flex;
-        flex-direction: column;
-    }
-
-    &__buttons {
-        display: flex;
-        gap: 24px;
-        @media screen and (max-width: 1000px) {
+        &__info {
+            display: flex;
+            gap: 40px;
             flex-wrap: wrap;
+
+            @media screen and (max-width: 500px)  {
+                gap: 16px!important;
+            }
+
+            > div {
+                @media screen and (max-width: 500px)  {
+                    flex: 1 1 100%;
+                    width: 100%;
+                }
+
+                @media screen and (min-width: 500px) and (max-width: 800px) {
+                    flex: 1 1 33%;
+                    max-width: calc((100% - 40px)/2);
+                }
+
+                @media screen and (min-width: 800px) and (max-width: 1000px) {
+                    flex: 1 1 25%;
+                    max-width: calc((100% - 2*40px)/3);
+                }
+
+                @media screen and (min-width: 1000px) and (max-width: 1300px) {
+                    flex: 1 1 33%;
+                    max-width: calc((100% - 40px)/2);
+                }
+
+                @media screen and (min-width: 1300px) {
+                    flex: 1 1 25%;
+                    max-width: calc((100% - 2*40px)/3);
+                }
+            }
+        }
+        &__second-column {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+
+            @media screen and (max-width: 1000px) {
+                flex: 1 1 100%;
+                max-width: 100%;
+            }
+
+            &__balances {
+                display: flex;
+                gap: 20px;
+
+                > div {
+                    width: 220px;
+                    max-width: 100%;
+                }
+
+                @media screen and (max-width: 550px) {
+                    flex-wrap: wrap;
+                    > div {
+                        width: 100%!important;
+                    }
+                }
+            }
+
+            &__buttons {
+                display: flex;
+                gap: 20px;
+
+                @media screen and (max-width: 550px) {
+                    flex-wrap: wrap;
+                    > button {
+                        width: 100%!important;
+                    }
+                }
+            }
         }
     }
 }
