--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -15,9 +15,8 @@
   //фоны
   --bg-primary: #FEFEFE;
   --bg-secondary: #2B3E78;
-  --bg-tertiary: #33457c;
+  --bg-tertiary: #33457C;
   --bg-quadruple: #F3F4F8;
-  --bg-item-grey: #F6F7FA;
   --bg-primary-buttons: #FEFEFE;
   --bg-secondary-buttons: #2B3E78;
   --bg-buttons-disable: #babec5;
