--- a/src/features/switcher/styles.scss
+++ b/src/features/switcher/styles.scss
@@ -2,28 +2,29 @@
   position: relative;
 
   &__icon {
-    cursor: pointer;
+    width: 24px;
   }
 
-  &__modal{
+  &__modal {
     position: absolute;
     top: 30px;
     right: 0;
     z-index: 1;
     box-shadow: 0 15px 20px 0 #0000000D;
     border-radius: var(--medium-border-radius);
-  }
 
-  &__button {
-    height: 64px;
-  }
+    &__button {
+      text-align: left;
+      color: var(--text-primary);
+      transition: text-decoration 500ms ease;
 
-  .active {
-    border-bottom: 1px solid var(--text-primary);
-  }
+      &.active {
+        text-decoration: underline;
+      }
 
-  &__buttons {
-    display: flex;
-    gap: 24px;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
 }
