--- a/src/shared/ui/input/styles.scss
+++ b/src/shared/ui/input/styles.scss
@@ -46,7 +46,9 @@
     }
 
     &.medium {
-      height: 72px;
+      height: 56px;
+      font-weight: 500;
+      font-size: 16px;
     }
 
     &.small {
@@ -64,13 +66,6 @@
           line-height: 36px;
         }
       }
-    }
-
-    &.extra-small{
-      height: 56px;
-      width: 330px;
-      font-weight: 500;
-      font-size: 16px;
     }
 
     .label {
@@ -119,7 +114,7 @@
       top: 24px;
       right: 24px;
     }
-    &.extra-small .input-icon {
+    &.medium .input-icon {
       top: 15px;
       right: 22px;
     }
