--- a/src/entities/cards/universal-card-card/ui/styles.scss
+++ b/src/entities/cards/universal-card-card/ui/styles.scss
@@ -10,6 +10,10 @@
     width: 33%;
     aspect-ratio: 799/499;
 
+    > a > img {
+      border-radius: var(--medium-border-radius);
+    }
+
     @media screen and (min-width: 900px) and (max-width: 1100px) {
       width: 40%!important;
     }
