--- a/src/entities/deposits/customer-deposit-card/styles.scss
+++ b/src/entities/deposits/customer-deposit-card/styles.scss
@@ -22,16 +22,9 @@
         gap: 24px;
 
         &__icon {
-            min-width: 70px;
+            min-width: 64px;
             img {
-                width: 70px;
-            }
-
-            @media screen and (max-width: 600px) {
-                min-width: 60px;
-                img {
-                    width: 60px;
-                }
+                width: 64px;
             }
         }
     }
@@ -39,8 +32,14 @@
     &__info {
         display: flex;
         justify-content: space-between;
-        gap: 57px;
+        gap: 60px;
         flex-wrap: wrap;
+
+        > div {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+        }
 
         @media screen and (max-width: 1550px) {
             gap: 30px!important;
