--- a/src/pages/account/ui/account-info/styles.scss
+++ b/src/pages/account/ui/account-info/styles.scss
@@ -14,7 +14,7 @@
     &__first-column, &__second-column {
         display: flex;
         flex-direction: column;
-        gap: 24px;
+        gap: 32px;
         justify-content: space-between;
     }
 
@@ -82,6 +82,11 @@
             > div {
                 flex: 1 1 100%;
             }
+        }
+        > div {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
         }
 
         margin-left: 56px;
