--- a/src/pages/contacts/ui/content/contacts/styles.scss
+++ b/src/pages/contacts/ui/content/contacts/styles.scss
@@ -4,7 +4,7 @@
         border-radius: var(--extra-large-border-radius);
         display: flex;
         flex-direction: column;
-        background-color: var(--bg-quadruple);
+        background-color: var(--bg-primary-card);
         &-block {
             display: flex;
             gap: 24px;
