--- a/src/pages/contacts/ui/content/working-hours/styles.scss
+++ b/src/pages/contacts/ui/content/working-hours/styles.scss
@@ -4,7 +4,7 @@
   border-radius: var(--extra-large-border-radius);
   display: flex;
   flex-wrap: wrap;
-  background-color: var(--bg-quadruple);
+  background-color: var(--bg-primary-card);
 
   &-block {
     display: flex;
@@ -15,7 +15,7 @@
       display: flex;
       flex-wrap: wrap;
       flex-direction: column;
-      gap: 10px;
+      gap: 8px;
 
       & .hours {
         display: flex;
