--- a/src/shared/ui/radio/styles.scss
+++ b/src/shared/ui/radio/styles.scss
@@ -2,10 +2,10 @@
   & [type="radio"] {
     display: none;
     &:checked ~ label {
-      box-shadow: inset 0 0 0 1px var(--text-primary-input);
+      box-shadow: inset 0 0 0 1px var(--text-action);
     }
     &:checked ~ label::before {
-      background: radial-gradient(var(--text-primary-input) 0%, var(--text-primary-input) 40%, transparent 50%, transparent);
+      background: radial-gradient(var(--text-action) 0%, var(--text-action) 40%, transparent 50%, transparent);
     }
   }
 
@@ -25,7 +25,7 @@
       width: 16px;
       right: 24px;
       top: calc(50% - 8px);
-      box-shadow: inset 0 0 0 1px var(--text-primary-input);
+      box-shadow: inset 0 0 0 1px var(--text-action);
     }
   }
 }
