--- a/src/shared/ui/slider-input/styles.scss
+++ b/src/shared/ui/slider-input/styles.scss
@@ -52,19 +52,19 @@
       display: flex;
       align-items: center;
 
-      input {
+      input[type=range] {
         -webkit-appearance: none;
         appearance: none;
+        accent-color: var(--text-action);
         height: 2px;
         width: 100%;
-        background: var(--text-light);
+        background: var(--text-quadruple);
 
         &::-webkit-slider-thumb, &::-moz-range-thumb {
           -webkit-appearance: none;
           appearance: none;
           width: 16px;
           height: 16px;
-          background: var(--text-action);
           cursor: pointer;
           border-radius: 50%;
         }
