refactor: AGEl-1421 актуализирован дизайн ATMsBranchesPage

--- a/src/shared/ui/aside-menu/styles.scss
+++ b/src/shared/ui/aside-menu/styles.scss
@@ -5,7 +5,7 @@
   left: 0;
   z-index: 10;
   width: 100%;
-  background: var(--bg-secondary);
+  background: var(--text-primary);
   opacity: .25;
 }
 
