feat: almost done w first page

--- a/src/shared/ui/text/styles.scss
+++ b/src/shared/ui/text/styles.scss
@@ -60,6 +60,9 @@
   &.right {
     text-align: right;
   }
+  &.unset {
+    line-height: unset;
+  }
 
   &.text-action {
     color: var(--text-action);
