--- a/src/widgets/main-menu/ui/styles.scss
+++ b/src/widgets/main-menu/ui/styles.scss
@@ -1,34 +1,29 @@
-.main-menu {
-    @media screen and (min-width: 1300px)  {
-        gap: 95px;
-    }
-    @media screen and (min-width: 1100px) and (max-width: 1300px)  {
-        gap: 70px;
-    }
-    @media screen and (max-width: 800px)  {
-        flex-wrap: wrap;
-        > div {
-            flex: 1 1 100%;
+.main-menu{
+    &_container{
+        display: flex;
+        min-height: 530px;
+        margin-top: 56px;
+        @media screen and (max-width: 800px) {
+            flex-wrap: wrap;
+         }
+        @media screen and (max-width: 1267px) {
+            align-items: center;
+            justify-content: center;
         }
     }
-    display: flex;
-    gap: 50px;
-    margin: 56px 0;
-
-    &__first-col {
-        @media screen and (min-width: 1100px)  {
-            min-width: 280px;
+    &_image{
+        width: max(40%, 350px);
+        position: relative;
+        background-image: url('../../../shared//ui/icon/assets/images/pinkish-semicircle.png');
+        background-repeat: no-repeat;
+        background-size: 40%;
+        background-position-x: 70%;
+        @media screen and (max-width: 1267px) {
+            display: none;
         }
-        min-width: 250px;
-        display: flex;
-        flex-direction: column;
-        gap: 32px;
-    }
-
-    &__second-col {
-        display: flex;
-        flex-direction: column;
-        gap: 24px;
-        width: 100%;
+        @media screen and (min-width: 1768px) {
+            background-size: 30%;
+            background-position-x: 50%;
+        }
     }
 }
