--- a/src/shared/ui/slider-input/styles.scss
+++ b/src/shared/ui/slider-input/styles.scss
@@ -21,7 +21,15 @@
       height: 40px;
       padding: 8px 24px;
       border-radius: var(--medium-border-radius);
-      background: var(--bg-secondary-input);
+
+      &.primary {
+        background: var(--bg-primary-input);
+      }
+
+      &.secondary {
+        background: var(--bg-secondary-input);
+      }
+
 
       &:hover, &:focus-within, &:active, &.active {
         box-shadow: inset 0 0 0 1px var(--text-primary-input);
@@ -36,7 +44,7 @@
         &:-webkit-autofill,
         &:-webkit-autofill:focus {
           -webkit-text-fill-color: var(--text-primary-input);
-          -webkit-box-shadow: 0 0 0 1000px var(--bg-secondary-input) inset;
+          -webkit-box-shadow: 0 0 0 1000px var(--bg-primary-input) inset;
         }
 
         &::-webkit-input-placeholder {
