--- a/src/pages/registration/ui/styles.scss
+++ b/src/pages/registration/ui/styles.scss
@@ -1,27 +1,24 @@
 .welcome__wrapper {
+    white-space: pre-wrap;
     display:flex;
     align-items:center;
-    justify-content:space-around;
-    margin:5% 0;
-    @media screen and (max-width: 1100px) {
+    justify-content: space-between;
+    margin:100px 0;
+    gap:60px;
+    @media screen and (max-width: 1200px) {
         flex-direction:column-reverse;
-        gap:30px;
-        margin:5% 0;
+        gap:40px;
     }
     
 }
-.welcome__left-side{
-    text-wrap:balance;
+.welcome__left-side {
     display:flex;
     flex-direction: column;
     align-items: center;
     flex-wrap:wrap;
     gap:20px;
-    max-width:35%;
-    @media screen and (max-width: 1100px) {
-        margin:10% 0;
-        max-width:75%;
-    }
+    width: 580px;
+    max-width: 100%;
 }
 
 .welcome__auth-redirect {
