fix: i18next, MainMenu, Carousel, MultiStepForm, FormCard

--- a/src/features/multi-step-form/styles.scss
+++ b/src/features/multi-step-form/styles.scss
@@ -8,11 +8,13 @@
   &.change-password {
     margin: 0;
     max-width: 100%;
+    display: block;
   }
 
   &.create-account {
     margin: 56px 0;
     max-width: 100%;
+    display: block;
   }
 }
 
