--- a/src/widgets/main-menu/ui/info/styles.scss
+++ b/src/widgets/main-menu/ui/info/styles.scss
@@ -4,6 +4,7 @@
         flex-direction: column;
         gap: 24px;
         width: 350px;
+        margin-bottom: 56px;
         @media screen and (max-width: 800px) {
             width: 100%;
         }
