--- a/src/features/multi-step-form/styles.scss
+++ b/src/features/multi-step-form/styles.scss
@@ -1,20 +1,20 @@
 .multi-step-form {
   margin: 100px auto;
   max-width: 580px;
-  display: flex;
-  flex-direction: column;
-  align-items:center;
+  &__logo {
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+  }
 
   &.change-password {
     margin: 0;
     max-width: 100%;
-    display: block;
   }
 
   &.create-account {
     margin: 56px 0;
     max-width: 100%;
-    display: block;
   }
 }
 
