--- a/src/entities/filter/filter-bar/styles.scss
+++ b/src/entities/filter/filter-bar/styles.scss
@@ -1,19 +1,34 @@
 .filter-bar {
     display: flex;
     align-items: center;
-    gap: 8px;
-    @media screen and (max-width: 600px) {
-        overflow-x: auto;
-        scroll-behavior: smooth;
-        &::-webkit-scrollbar {
-            display: none;
+
+    &.primary {
+        gap: 8px;
+        @media screen and (max-width: 600px) {
+            overflow-x: auto;
+            scroll-behavior: smooth;
+            &::-webkit-scrollbar {
+                display: none;
+            }
         }
+    }
+
+    &.secondary {
+        column-gap: 40px;
+        row-gap: 16px;
+        flex-wrap: wrap;
+        justify-content: space-around;
     }
 
     &__button {
         border-radius: var(--medium-border-radius);
         padding: 4px 16px;
         gap: 8px;
+
+        &.secondary {
+            color: var(--text-secondary-buttons);
+            background: var(--bg-buttons-disable);
+        }
 
         &.active {
             color: var(--text-secondary-buttons);
