feat: AGEL-1608 добавила DepositProductPage, DepositProductDetailsCard, DepositProductBenefits, DepositProductOffers, SmallDepositCard

--- a/src/shared/ui/form/styles.scss
+++ b/src/shared/ui/form/styles.scss
@@ -6,7 +6,7 @@
   }
 
   &.error {
-    color: var(--text-error) !important;
+    color: var(--text-error);
     margin-top: 8px;
     font-size: 12px;
     font-weight: 400;
