--- a/src/widgets/toaster/styles.scss
+++ b/src/widgets/toaster/styles.scss
@@ -1,7 +1,7 @@
 .toaster {
     padding: 12px!important;
     border-radius: var(--large-border-radius)!important;
-    min-width: 300px!important;
+    min-width: 300px;
     background: var(--bg-primary)!important;
     color: var(--text-primary)!important;
     box-shadow: 0 15px 20px 0 #0000000D!important;
