--- a/src/entities/cards/universal-card-card/ui/styles.scss
+++ b/src/entities/cards/universal-card-card/ui/styles.scss
@@ -1,9 +1,14 @@
 .universal-card-card {
+  display: flex;
+  gap: 60px;
+  flex-wrap: wrap;
+  width: 100%;
+
   @media screen and (min-width: 900px) and (max-width: 1300px) {
-    gap: 40px!important;
+    gap: 40px;
   }
   @media screen and (max-width: 900px) {
-    gap: 24px!important;
+    gap: 24px;
   }
   &__image {
     flex: 0 0 auto;
@@ -15,24 +20,24 @@
     }
 
     @media screen and (min-width: 900px) and (max-width: 1100px) {
-      width: 40%!important;
+      width: 40%;
     }
     @media screen and (max-width: 900px) {
-      width: 100% !important;
+      width: 100%;
       img {
-        width: 100% !important;
+        width: 100%;
       }
     }
   }
   &__second {
     @media screen and (min-width: 1100px) and (max-width: 1300px) {
-      width: calc(67% - 40px)!important;
+      width: calc(67% - 40px);
     }
     @media screen and (min-width: 900px) and (max-width: 1100px) {
-      width: calc(60% - 40px)!important;
+      width: calc(60% - 40px);
     }
     @media screen and (max-width: 900px) {
-      width: 100% !important;
+      width: 100%;
     }
     display: flex;
     flex-direction: column;
@@ -88,15 +93,12 @@
 
       @media screen and (max-width: 600px) {
         button, a {
-          width: 100% !important;
+          width: 100%;
         }
       }
       @media screen and (min-width: 600px) and (max-width: 1100px) {
         > button, > a {
-          width: calc((100% - 20px)/2) !important;
-        }
-        a button {
-          width: 100% !important;
+          width: calc((100% - 20px)/2);
         }
       }
     }
