--- a/src/entities/deposits/universal-deposit-card/styles.scss
+++ b/src/entities/deposits/universal-deposit-card/styles.scss
@@ -42,7 +42,7 @@
         }
 
         @media screen and (max-width: 1400px) {
-            gap: 30px!important;
+            gap: 30px;
         }
     }
 }
