--- a/src/pages/deposit/ui/deposit-info/styles.scss
+++ b/src/pages/deposit/ui/deposit-info/styles.scss
@@ -68,7 +68,7 @@
             flex-wrap: wrap;
 
             @media screen and (max-width: 500px)  {
-                gap: 16px!important;
+                gap: 16px;
             }
 
             > div {
@@ -120,7 +120,7 @@
                 @media screen and (max-width: 550px) {
                     flex-wrap: wrap;
                     > div {
-                        width: 100%!important;
+                        width: 100%;
                     }
                 }
             }
@@ -132,7 +132,7 @@
                 @media screen and (max-width: 550px) {
                     flex-wrap: wrap;
                     > button {
-                        width: 100%!important;
+                        width: 100%;
                     }
                 }
             }
