--- a/src/shared/ui/input/styles.scss
+++ b/src/shared/ui/input/styles.scss
@@ -3,7 +3,7 @@
   color: var(--text-primary-input);
 
   &.error {
-    color: var(--text-error)!important;
+    color: var(--text-error);
   }
 
   &.large {
@@ -20,7 +20,6 @@
 
   .input {
     position: relative;
-    padding: 16px 24px;
     border-radius: var(--medium-border-radius);
     transition: box-shadow ease .5s;
     background: var(--bg-primary-input);
@@ -30,7 +29,7 @@
     }
 
     &.disabled:hover {
-      box-shadow: none!important;
+      box-shadow: none;
     }
 
     &:hover, &:focus-within, &:active, &.active {
@@ -38,21 +37,23 @@
     }
     
     &.error {
-      box-shadow: inset 0 0 0 1px var(--text-error) !important;
+      box-shadow: inset 0 0 0 1px var(--text-error);
     }
 
     &.large {
       height: 72px;
+      padding: 16px 24px;
     }
 
     &.medium {
       height: 56px;
+      padding: 16px 24px;
     }
 
     &.small {
       height: 72px;
       max-width: 72px;
-      padding: 16px!important;
+      padding: 16px;
 
       input {
         text-align: center;
@@ -79,7 +80,7 @@
       height: 100%;
 
       &.with-label {
-        padding-top: 14px !important;
+        padding-top: 14px;
       }
 
       &:-webkit-autofill,
@@ -101,7 +102,7 @@
 
       &.error {
         &::-webkit-input-placeholder {
-          color: var(--text-error) !important;
+          color: var(--text-error);
         }
       }
     }
