--- a/src/entities/deposits/universal-deposit-card/styles.scss
+++ b/src/entities/deposits/universal-deposit-card/styles.scss
@@ -1,14 +1,14 @@
-.universal-deposit-card {
+.customer-deposit-card {
     &__container {
         display: flex;
         justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
         row-gap: 24px;
-        column-gap: 24px;
+        column-gap: 57px;
         width: 100%;
 
-        @media screen and (max-width: 1400px) {
+        @media screen and (max-width: 1550px) {
             > div {
                 flex: 1 1 100%;
                 max-width: 100%;
@@ -41,7 +41,7 @@
             gap: 4px;
         }
 
-        @media screen and (max-width: 1400px) {
+        @media screen and (max-width: 1550px) {
             gap: 30px!important;
         }
     }
