fix: AGEL-1663 произведен дебаг и рефакторинг обработки touch в Carousel

--- a/src/shared/ui/carousel/ui/carousel-galery/styles.scss
+++ b/src/shared/ui/carousel/ui/carousel-galery/styles.scss
@@ -11,7 +11,9 @@
   
   &_container{
     height: 100%;
-    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     display: flex;
     justify-content: center;
     align-items: center;
