feat: AGEL-1660 - Актуализация Input, Button, Icon, Text                 - Добавлено Switcher, Preloader, Radio, SliderInput, Checkbox, Link, Form, Container, Card, Columns, AsideMenu                 - Рефакторинг Checkbox, Carousel

--- a/src/shared/ui/card/styles.scss
+++ b/src/shared/ui/card/styles.scss
@@ -12,6 +12,10 @@
   }
 
   &.left {
+    align-items: flex-start;
+  }
+
+  &.right {
     align-items: flex-end;
   }
 
@@ -81,10 +85,6 @@
 
   &.extra-large-padding {
     padding: 40px;
-  }
-
-  &.active {
-    box-shadow: inset 0 0 0 1px var(--bg-action);
   }
 }
 
