--- a/src/shared/ui/carousel/ui/inner/styles.scss
+++ b/src/shared/ui/carousel/ui/inner/styles.scss
@@ -1,15 +1,8 @@
-.carousel{
-  &_inner_container{
-    width:100%;
-    height: 70%;
-    &_hidden{
-      width:100%;
-      height: 70%;
-      overflow: hidden;
-    }
-  }
+.carousel-inner {
+  width:100%;
+  height: 352px;
   
-  &_container{
+  &__container{
     height: 100%;
     user-select: none;
     display: flex;
@@ -20,18 +13,22 @@
     transition: all 1.2s ease;
   }
 
-  &_element{
+  &__element{
     cursor: grab;
-    min-height: 320px;
     user-select: none;
     width: 100%;
     height: 100%;
     text-align: center;
-    text-wrap: wrap;
     position: absolute;
     white-space: break-spaces;
+    visibility: visible;
+    transition: visibility 0.5s ease-out;
     @media screen and (max-width: 450px) {
       min-height: 500px;
+    }
+
+    &.hidden {
+      visibility: hidden;
     }
   }
 }
