--- a/src/shared/ui/radio/styles.scss
+++ b/src/shared/ui/radio/styles.scss
@@ -1,15 +1,15 @@
 .radio  {
   & [type="radio"] {
     display: none;
-    &:checked ~ label {
+    &:checked ~ div {
       box-shadow: inset 0 0 0 1px var(--text-action);
     }
-    &:checked ~ label::before {
+    &:checked ~ div::before {
       background: radial-gradient(var(--text-action) 0%, var(--text-action) 40%, transparent 50%, transparent);
     }
   }
 
-  label {
+  > div {
     position: relative;
     display: flex;
     gap: 4px;
