--- a/src/shared/ui/slider-input/styles.scss
+++ b/src/shared/ui/slider-input/styles.scss
@@ -4,7 +4,6 @@
   gap: 16px;
   width: 100%;
   max-width: 700px;
-
   &__inputs {
     display: flex;
     flex-direction: column;
@@ -85,4 +84,7 @@
       justify-content: space-between;
     }
   }
+}
+.stretch{
+  max-width:unset;
 }
