--- a/src/shared/ui/carousel/ui/inner/styles.scss
+++ b/src/shared/ui/carousel/ui/inner/styles.scss
@@ -1,10 +1,16 @@
 .carousel-inner {
   width:100%;
-  height: 352px;
+  height: 100%;
+  min-height: 352px;
   overflow: hidden;
+
+  @media screen and (max-width: 400px) {
+    min-height: 500px;
+  }
   
   &__container{
     height: 100%;
+    min-height: 352px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -14,6 +20,10 @@
     position:relative;
     transform-style: preserve-3d;
     transition: all 1.2s ease;
+
+    @media screen and (max-width: 400px) {
+      min-height: 500px;
+    }
   }
 
   &__element{
@@ -28,10 +38,6 @@
     transition: visibility 0.5s ease-out;
     @media screen and (max-width: 450px) {
       min-height: 500px;
-    }
-
-    &.hidden {
-
     }
   }
 }
