--- a/src/entities/message/message-card/styles.scss
+++ b/src/entities/message/message-card/styles.scss
@@ -17,4 +17,22 @@
     max-width: 340px;
     width: 100%;
   }
+
+  &__two-button {
+    display: flex;
+    width: 100%;
+    gap: 20px;
+
+    > a {
+      width: 100%;
+    }
+
+    @media screen and (max-width: 600px) {
+      flex-wrap: wrap;
+    }
+
+    > div {
+      flex: 1 1 50%;
+    }
+  }
 }
