--- a/src/entities/deposits/universal-deposit-card/styles.scss
+++ b/src/entities/deposits/universal-deposit-card/styles.scss
@@ -1,4 +1,4 @@
-.customer-deposit-card {
+.universal-deposit-card {
     &__container {
         display: flex;
         justify-content: space-between;
