--- a/src/entities/deposits/universal-deposit-card/styles.scss
+++ b/src/entities/deposits/universal-deposit-card/styles.scss
@@ -34,6 +34,7 @@
     &__info {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         gap: 40px;
 
         > div {
