--- a/src/shared/ui/select/styles.scss
+++ b/src/shared/ui/select/styles.scss
@@ -1,4 +1,5 @@
 .select {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -69,10 +70,16 @@
   }
 
   &__dropdown {
+    margin-top: 8px;
+    position: absolute;
+    top: 72px;
+    right: 0;
     width: 100%;
+    z-index: 1;
     max-height: 250px;
     overflow-y: scroll;
     border-radius: var(--medium-border-radius);
+    box-shadow: inset 0 0 0 1px var(--bg-primary-input);
 
     &.primary {
       background: var(--bg-primary-input);
