feat: AGEL-1776 добавлено BankObjectMap, MapCityQuestionModal, MapChangeCityModal, getFilteredBankObjects

--- a/src/pages/atms-branches/ui/bank-object-map/bank-object-info-menu/styles.scss
+++ b/src/pages/atms-branches/ui/bank-object-map/bank-object-info-menu/styles.scss
@@ -26,5 +26,11 @@
   &__schedule {
     white-space: pre-wrap
   }
+
+  &__contacts {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
 }
 
