--- a/src/shared/ui/carousel/ui/inner/styles.scss
+++ b/src/shared/ui/carousel/ui/inner/styles.scss
@@ -2,10 +2,15 @@
   width:100%;
   height: 100%;
   min-height: 352px;
-  overflow: hidden;
+  &.overflowHidden{
+    overflow: hidden;
+  }
 
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 500px) {
     min-height: 500px;
+  }
+  @media screen and (max-width: 370px) {
+    min-height: 600px;
   }
   
   &__container{
@@ -21,8 +26,11 @@
     transform-style: preserve-3d;
     transition: all 1.2s ease;
 
-    @media screen and (max-width: 400px) {
+    @media screen and (max-width: 500px) {
       min-height: 500px;
+    }
+    @media screen and (max-width: 370px) {
+      min-height: 600px;
     }
   }
 
@@ -34,10 +42,13 @@
     text-align: center;
     position: absolute;
     white-space: break-spaces;
-    visibility: visible;
     transition: visibility 0.5s ease-out;
-    @media screen and (max-width: 450px) {
+    @media screen and (max-width: 500px) {
       min-height: 500px;
     }
+    @media screen and (max-width: 370px) {
+      min-height: 600px;
+    }
+    
   }
 }
