refactor: AGEL-1916 add eye-open/eye-close to Card, refactor deposit term

--- a/src/entities/cards/universal-card-card/ui/styles.scss
+++ b/src/entities/cards/universal-card-card/ui/styles.scss
@@ -67,6 +67,12 @@
 
           }
         }
+
+        &__eye {
+          display: flex;
+          align-items: center;
+          gap: 8px;
+        }
       }
 
       &__details {
@@ -75,8 +81,9 @@
         row-gap: 16px;
         flex-wrap: wrap;
 
-        &__copy {
+        &__eye {
           display: flex;
+          align-items: center;
           gap: 8px;
 
           button {
