--- a/src/entities/accounts/account-card/styles.scss
+++ b/src/entities/accounts/account-card/styles.scss
@@ -9,9 +9,11 @@
         display: flex;
         flex-direction: column;
         gap: 4px;
-        
-        & :first-child>button{
-                padding: 0 10px;
+
+        &__eye {
+            display: flex;
+            align-items: center;
+            gap: 8px;
         }
     }
 
